budget-app-k8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app-deployment
  labels:
    app: node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-app
  template:
    metadata:
      labels:
        app: budget-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: budget-app
        image: kristerslielups/personal-projects:budget-app-image
        imagePullPolicy: Always
        ports:
          - name: vue-port
            containerPort: 80
          - name: graphql-port
            containerPort: 9000
          - name: rest-port
            containerPort: 9001
        startupProbe:
          httpGet:
            path: /
            port: vue-port
          initialDelaySeconds: 60
          failureThreshold: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /readiness
            port: graphql-port
          initialDelaySeconds: 10
          periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: budget-app-service
spec:
  type: LoadBalancer
  selector:
    app: budget-app
  ports:
    - name: vue
      port: 80
      targetPort: vue-port
    - name: graphql
      port: 9000
      targetPort: graphql-port
    - name: rest
      port: 9001
      targetPort: rest-port
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: budget-app-ingress
spec:
  backend:
    serviceName: budget-app-service
    servicePort: vue
  rules:
    - http:
        paths:
          - path: '/graphql'
            pathType: Exact
            backend:
              serviceName: budget-app-service
              servicePort: graphql
          - path: '/upload'
            pathType: Exact
            backend:
              serviceName: budget-app-service
              servicePort: rest
